welcome.lessons.welcome.methods.picture.MethodsPicture.scala.error
MethodsPicture:5: error: not found: type Jaune
def faireV(c: Jaune) {
              ^